Fixing migration errors

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,12 +2,12 @@ remote_theme: pmarsceill/just-the-docs
 
 title: API Principles
 description: The SBB API Principles [Draft]
-baseurl: "/API-Principles"
-url: "https://thomas-siegrist.github.io"
+baseurl: "/api-principles"
+url: "https://schweizerischebundesbahnen.github.io"
 
 permalink: pretty
 search_enabled: true
 heading_anchors: true
 aux_links:
     "API Principles on GitHub":
-      - "//github.com/thomas-siegrist/api-principles"
+      - "//github.com/schweizerischebundesbahnen/api-principles"
